BUGFIX | logo now visible

--- a/wp-content/themes/kleo-child/amadded/assets/scss/layouts/_navbar.scss
+++ b/wp-content/themes/kleo-child/amadded/assets/scss/layouts/_navbar.scss
@@ -326,7 +326,9 @@ $bp-subnav-mobile: $bp-md-1;
     margin:$offset-1 0 0 0;
 
     @media (max-width:$bp-xxs-1){
-        height:50px;
+        height:50px !important;
+        max-height:50px !important;
+        min-height:50px !important;
         margin:5px 0 0 0;
     }
 }
